site/content/en/v0.30.2/user-guide/sdk.md
---
title: Pepr SDK
weight: 15
---


## `containers`

Returns list of all containers in a pod. Accepts the following parameters:

- **@param peprValidationRequest** The request/pod to get the containers from
- **@param containerType** The type of container to get

**Usage:**

**_Get all containers_**

```typescript
let result = containers(peprValidationRequest)
```

**_Get only the standard containers_**

```typescript
let result = containers(peprValidationRequest, "containers")
```

**_Get only the init containers_**

```typescript
let result = containers(peprValidationRequest, "initContainers")
```

**_Get only the ephemeral containers_**

```typescript
let result = containers(peprValidationRequest, "ephemeralContainers")
```

---

## `getOwnerRefFrom`

Returns the owner reference for a Kubernetes resource. Accepts the following parameters:

- **@param kubernetesResource: GenericKind** The Kubernetes resource to get the owner reference for

**Usage:**

```typescript
const ownerRef = getOwnerRefFrom(kubernetesResource);
```

---

## `writeEvent`

Write a K8s event for a CRD. Accepts the following parameters:

- **@param kubernetesResource: GenericKind** The Kubernetes resource to write the event for
- **@param event** The event to write, should contain a human-readable message for the event
- **@param eventType** The type of event to write, for example "Warning"
- **@param eventReason** The reason for the event, for example "ReconciliationFailed"
- **@param reportingComponent** The component that is reporting the event, for example "uds.dev/operator"
- **@param reportingInstance** The instance of the component that is reporting the event, for example process.env.HOSTNAME

**Usage:**

```typescript
writeEvent(
  kubernetesResource,
  event,
  "Warning",
  "ReconciliationFailed",
  "uds.dev/operator",
  process.env.HOSTNAME,
);
```

---

## `sanitizeResourceName`

Returns a sanitized resource name to make the given name a valid Kubernetes resource name. Accepts the following parameter:

- **@param resourceName** The name of the resource to sanitize

**Usage:**

```typescript
const sanitizedResourceName = sanitizeResourceName(resourceName)
```

---

## See Also

Looking for information on the Pepr mutate helpers? See [Mutate Helpers](../actions/mutate#mutate-helpers) for information on those.
